All styles completed.

--- a/micro_content_manager/templates/micro_content_manager/copy.html
+++ b/micro_content_manager/templates/micro_content_manager/copy.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>You copied the Micro Content</title>
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 
 
