--- a/micro_content_manager/templates/micro_content_manager/create.html
+++ b/micro_content_manager/templates/micro_content_manager/create.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
     <title>Create Micro Content</title>
 </head>
 <body class="bg-study">
