--- a/micro_content_manager/templates/micro_content_manager/delete.html
+++ b/micro_content_manager/templates/micro_content_manager/delete.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>You deleted the Micro content</title>
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body>
     <h4>You just deleted the Micro content! </h4>
