--- a/micro_content_manager/templates/micro_content_manager/do_the_micro_content.html
+++ b/micro_content_manager/templates/micro_content_manager/do_the_micro_content.html
@@ -11,6 +11,8 @@
      <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
      <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
      <title>Do the Micro Content</title>
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body class="bg-study">
     <div class="body" style="max-width: 1000px!important;">
