--- a/micro_content_manager/templates/micro_content_manager/results.html
+++ b/micro_content_manager/templates/micro_content_manager/results.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Results</title>
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body>
 <p>You got <strong>{{ correct_answers }}</strong> correct answers out of <strong>{{ micro_content.questions.count }}</strong> questions at <strong>{{ micro_content.title }}</strong></p>
