--- a/micro_content_manager/templates/micro_content_manager/create_selection.html
+++ b/micro_content_manager/templates/micro_content_manager/create_selection.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
           <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
         <meta name="author" content="Inao Latourrette">
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 
 </head>
 <body class="bg-study">
