--- a/micro_content_manager/templates/micro_content_manager/edit.html
+++ b/micro_content_manager/templates/micro_content_manager/edit.html
@@ -7,6 +7,8 @@
     <title>Edit Micro Content</title>
       <link rel="stylesheet" type="text/css" href="{% static 'demo2.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body class="bg-study">
 
