--- a/micro_content_manager/templates/micro_content_manager/update.html
+++ b/micro_content_manager/templates/micro_content_manager/update.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Update</title>
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body>
 
