--- a/micro_content_manager/templates/micro_content_manager/webcam_record.html
+++ b/micro_content_manager/templates/micro_content_manager/webcam_record.html
@@ -12,6 +12,8 @@
     <meta name="author" content="Muaz Khan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="https://cdn.webrtc-experiment.com/style.css">
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 
     <style>
         li {
