--- a/users_manager/static/demo2.css
+++ b/users_manager/static/demo2.css
@@ -81,6 +81,11 @@ html, body {
 .col.span10 { width: 780px; }
 .col.span11 { width: 860px; }
 .col.span12 { width: 940px; }
+.col.span13 { width: 1120px; }
+.col.span14 { width: 1200px; }
+.col.span15 { width: 1280px; }
+.col.span16 { width: 1360px; }
+
 
 .adjust {
     max-height: 95%;
