--- a/users_manager/templates/registration/password_reset_complete.html
+++ b/users_manager/templates/registration/password_reset_complete.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
 
 
 	</head>
