--- a/users_manager/templates/users_manager/confirm_registration.html
+++ b/users_manager/templates/users_manager/confirm_registration.html
@@ -5,6 +5,8 @@
     <title>Your account will be activate it shortly</title>
      <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
      <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+    	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 </head>
 <body>
     <h4>'The administrator will confirm your registration shortly. You will receive an email with the confirmation'</h4>
