--- a/users_manager/templates/users_manager/user_data.html
+++ b/users_manager/templates/users_manager/user_data.html
@@ -9,6 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{% static 'demo.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'sky-forms.css' %}">
+        	<link rel="icon" type="image/png" href="{% static 'images/icons/book.png' %}"/>
+
 	</head>
 	<body class="bg-study">
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
