--- a/micro_content_manager/templates/micro_content_manager/do_the_micro_content.html
+++ b/micro_content_manager/templates/micro_content_manager/do_the_micro_content.html
@@ -68,7 +68,7 @@
             <fieldset>
                 <div>
                     {% for v in micro_content.videos %}
-                      <iframe width="300" height="160" src="{{ v.url }}"></iframe>
+                      <video width="300" height="160" src="{{ v.url }}"></video>
                     {% endfor%}
                 </div>
 
