--- a/users_manager/templates/users_manager/user_page.html
+++ b/users_manager/templates/users_manager/user_page.html
@@ -28,7 +28,7 @@
             <div class="wrapper">
                 <div class="row">
                     <div class="col span4">
-                        <p><a class="button left" href="{% url 'micro_content_manager:micro_content_search' %}">Search micro contents</a></p>
+                        <p><a class="button left" href="{% url 'micro_content_manager:micro_content_search' 1 %}">Search micro contents</a></p>
                     </div>
                 </div>
                 <div class="row">
