--- a/micro_content_manager/templates/micro_content_manager/mc_search.html
+++ b/micro_content_manager/templates/micro_content_manager/mc_search.html
@@ -28,44 +28,24 @@
 <body class="bg-study">
 
     <div class="body">
-     <h1>Micro contents search</h1>
+     <h1>Micro contents search </h1>
 
         <div class="sky-form">
             <div class="white">
                 <fieldset>
                     <div class="wrapper">
-                          <div class="row">
-                                <div class="col">1</div>
-                                <div class="col">2</div>
-                                <div class="col">3</div>
-                                <div class="col">4</div>
-                                <div class="col">5</div>
-                                <div class="col">6</div>
-                                <div class="col">7</div>
-                                <div class="col">8</div>
-                                <div class="col">9</div>
-                                <div class="col">10</div>
-                                <div class="col">11</div>
-                                <div class="col">12</div>
-                                  <div class="col">13</div>
-                                  <div class="col">14</div>
-                                  <div class="col">15</div>
-                                  <div class="col">16</div>
-                          </div>
                         <div class="row">
                             <p><strong>Search in: </strong> </p>
                         </div>
                           <div class="row">
-                                    <form action='{% url 'micro_content_manager:micro_content_search' %}' method="post">
-                                        {% csrf_token %}
-
-                                         <div class="col span3" >
-                                            <button type="submit" class="button" style="margin-left: 0px!important;">My Micro Contents</button>
+                              <div>
+                                         <div class="col span4" >
+                                            <a  href="{% url 'micro_content_manager:micro_content_search' 1 %}" class="button" style="margin-left: 0px!important; color: white!important;">My Micro Contents</a>
                                         </div>
-                                        <div class="col span3">
-                                            <button type="submit" class="button"  style="margin-left: 0px!important;">All Micro Contents</button>
+                                        <div class="col span4">
+                                            <a href="{% url 'micro_content_manager:micro_content_search' 2 %}" class="button"  style="margin-left: 0px!important; color: white!important;">All Micro Contents</a>
                                         </div>
-                                     </form>
+                          </div>
                           </div>
                             <br><br>
                             <div class="row">
@@ -77,14 +57,20 @@
 
                               <div class="col span7 wrap" >
 
-                                   <div class="search">
-
-                                      <input type="text" class="searchTerm" placeholder="Search by tags">
-
+                                      {% if tab == 1 %}
+                                            <form action="{% url 'micro_content_manager:micro_content_search' 1 %}" method="post" >
+                                      {% else %}
+                                                <form action="{% url 'micro_content_manager:micro_content_search' 2 %}" method="post" >
+                                     {% endif %}
+                                      {% csrf_token %}
+                                      <input type="hidden" name="tab" value="{{ tab }}">
+                                      <input type="text" name="search" class="searchTerm" placeholder="Search by tags">
                                       <button type="submit" class="searchButton">
                                         <i class="fa fa-search"><img src='{% static 'images/search.png' %}' width="20px" height="17px" style="color: white;"></i>
                                      </button>
-                                   </div>
+
+
+                                  </form>
 
                               </div>
                           </div>
@@ -94,14 +80,26 @@
                 <fieldset>
 
                                   <div class="limiter">
-                                      <h2><strong>My micro contents</strong></h2>
-		                                <div class="container-table100">
+                                      {% if tab == 1 %}
+                                            <h2><strong>My micro contents</strong></h2>
+                                      {% else %}
+                                            <h2><strong>All micro contents</strong></h2>
+                                      {% endif %}
+                                        <br>
+                                      {% if search %}
+                                          <h6>Search:
+                                              {% for s in search %}
+                                                  {{ s }}
+                                              {% endfor %}
+                                          </h6>
+                                      {% endif %}
+		                                <div class="container-table100" >
                                             <div class="wrap-table100">
                                                 <div class="table100 ver1 m-b-110">
                                                     <div class="table100-head">
                                                         <table>
                                                             <thead>
-                                                                <tr class="row100 head">
+                                                                <tr class="row100 head" >
                                                                     <th class="cell100 column1">Title</th>
                                                                     <th class="cell100 column2">Author</th>
                                                                     <th class="cell100 column3">Options</th>
@@ -116,7 +114,11 @@
 
 
                                                             {% for id, info in list_result.items %}
-                                                                <tr class="row100 body">
+                                                                 {% if tab == 1 and user.username != info.1 %}
+                                                                 {% else  %}
+                                                                    <tr class="row100 body">
+
+
                                                                     <td class="cell100 column1"><a href="{% url 'micro_content_manager:micro_content_data' id%}"> {{ info.0}}</a></td>
                                                                     <td class="cell100 column2">{{ info.1 }}</td>
 
@@ -133,6 +135,7 @@
                                                                              <a class="button" href="{% url 'micro_content_manager:do_the_micro_content' id%}" style="margin-right: 50px; background-color: green;">Try it!</a>
                                                                          </td>
                                                                     {% endif %}
+                                                                 {% endif %}
                                                                 </tr>
                                                                 {% empty %}
                                                                     <tr>
